--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,10 @@ jobs:
           repository: heiher/hev-socks5-tunnel
           path: 'tun'
 
+      - uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: latest-stable
+
       - name: Setup Dependencies
         run: |
           command -v "brew" >/dev/null 2>&1 || {
