--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,19 +17,9 @@ jobs:
 
       - uses: actions/checkout@v3
         with:
+          submodules: 'true'
           repository: heiher/hev-socks5-tunnel
           path: 'tun'
-
-      - uses: maxim-lobanov/setup-xcode@v1
-        with:
-          xcode-version: latest-stable
-
-      - name: Setup Dependencies
-        run: |
-          command -v "brew" >/dev/null 2>&1 || {
-            /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-          }
-          brew install libyaml 
           
       - name: Build xcframework
         run: |
